Zapis i odczyt skończone. Oczywiście nie licząc bugów. Wiem, że są, jeszcze nie wiem gdzie.